name:                fmark
version:             0.1.0.0
homepage:            http://github.com/jabolopes/fmark
bug-reports:         http://github.com/jabolopes/fmark/issues
synopsis:            A Friendly Markup language without formatting.
description:         A Friendly Markup language that preserves the original document format.
license:             BSD3
license-file:        LICENSE
author:              José Lopes
maintainer:          José Lopes <jabolopes@gmail.com>
stability:           Experimental
category:            Text

build-type:          Simple
cabal-version:       >=1.8

executable fmark
  main-is:             Main.hs
  -- other-modules:       
  build-depends:
        base == 4.5.*,
        mtl == 2.1.*,
        directory == 1.1.*,
        filepath == 1.3.*,
        process == 1.1.*,
        Unixutils == 1.50.*

source-repository head
  type:     git
  location: http://github.com/jabolopes/fmark.git